Primeras consultas CRUD

--- a/andMarket/src/main/resources/application-dev.properties
+++ b/andMarket/src/main/resources/application-dev.properties
@@ -1,1 +1,5 @@
 server.port=8090
+# Database
+spring.datasource.url=jdbc:postgresql://localhost:5432/and_market
+spring.datasource.username=cursos
+spring.datasource.password=1234
