--- a/andMarket/build.gradle
+++ b/andMarket/build.gradle
@@ -21,6 +21,8 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+	implementation 'org.springframework.boot:spring-boot-starter-data-jpa:3.4.5'
+	runtimeOnly 'org.postgresql:postgresql:42.7.5'
 }
 
 tasks.named('test') {
