--- a/andMarket/src/main/resources/application-pdn.properties
+++ b/andMarket/src/main/resources/application-pdn.properties
@@ -1,1 +1,5 @@
 server.port=8081
+# Database
+spring.datasource.url=jdbc:postgresql://localhost:5432/and_market
+spring.datasource.username=cursos
+spring.datasource.password=1234
