--- a/andMarket/build.gradle
+++ b/andMarket/build.gradle
@@ -23,6 +23,8 @@ dependencies {
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa:3.4.5'
 	runtimeOnly 'org.postgresql:postgresql:42.7.5'
+	implementation 'org.mapstruct:mapstruct:1.6.3'
+	annotationProcessor 'org.mapstruct:mapstruct-processor:1.6.3'
 }
 
 tasks.named('test') {
