--- a/and-pizzas/build.gradle
+++ b/and-pizzas/build.gradle
@@ -26,6 +26,9 @@ repositories {
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
+	implementation 'org.springframework.security:spring-security-core:6.4.5'
+	implementation 'org.springframework.security:spring-security-web:6.4.5'
+	implementation 'org.springframework.boot:spring-boot-starter-security:3.4.5'
 	compileOnly 'org.projectlombok:lombok'
 	runtimeOnly 'com.mysql:mysql-connector-j'
 	annotationProcessor 'org.projectlombok:lombok'
