--- a/and-pizzas/src/main/resources/application.properties
+++ b/and-pizzas/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=and-pizzas
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/pizzeria
-spring.datasource.username=curso
+spring.datasource.url=jdbc:mysql://localhost:3306/pizzas
+spring.datasource.username=cursos
 spring.datasource.password=1234
 
 spring.jpa.hibernate.ddl-auto=update
