--- a/and-pizzas/src/main/resources/application.properties
+++ b/and-pizzas/src/main/resources/application.properties
@@ -8,4 +8,7 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
+logging.level.org.springframework.security=DEBUG
+
+
 server.port=8081
