--- a/and-pizzas/build.gradle
+++ b/and-pizzas/build.gradle
@@ -29,6 +29,7 @@ dependencies {
 	implementation 'org.springframework.security:spring-security-core:6.4.5'
 	implementation 'org.springframework.security:spring-security-web:6.4.5'
 	implementation 'org.springframework.boot:spring-boot-starter-security:3.4.5'
+	implementation 'com.auth0:java-jwt:4.5.0'
 	compileOnly 'org.projectlombok:lombok'
 	runtimeOnly 'com.mysql:mysql-connector-j'
 	annotationProcessor 'org.projectlombok:lombok'
